Fix gap between navigation list elements.

--- a/stylesheets/default.sass
+++ b/stylesheets/default.sass
@@ -115,43 +115,32 @@ h1
 nav > ul
   +reset-list
   position: absolute
-  top: 8.75em
+  top: 7.63em
   left: 0
   +clearfix
 
   li
     display: block
     float: left
+    background: $fill1
+
+    &:first-child
+      padding-left: 1.45em
+
+    &:last-child
+      padding-right: 1.45em
 
     a
       +reset
       +ease-in-out
+      display: inline-block
       padding: 0.75em
-      background: $fill1
       font-size: 1.5em
       letter-spacing: 0.1em
       text:
         transform: uppercase
         decoration: none
       color: $text1
-
-      &:hover, &:active
-        background: $link1
-        color: $fill2
-
-    &:first-child:before, &:last-child:after
-      content: ''
-      padding:
-        top: 0.75em
-        bottom: 0.75em
-      background: $fill1
-      font-size: 1.5em
-
-    &:first-child:before
-      padding-left: 1em
-
-    &:last-child:after
-      padding-right: 1em
 
 footer > p
   +sans-serif
